my first commit

--- a/index.html
+++ b/index.html
@@ -1,8 +1,37 @@
 <html>
     <head>
-        <title>Sample html file</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+        <script src="src/index.js" type="module"></script>
     </head>
     <body>
-        The page
+        <nav>
+            <ul>
+                <li>
+                    <a href="/signin">Sign In</a>
+                </li>
+                <li>
+                    <a href="/signup">Sign Up</a>
+                </li>
+                <li>
+                    <a href="/chat">Chat</a>
+                </li>
+                <li>
+                    <a href="/chat/view">Active chat</a>
+                </li>
+                <li>
+                    <a href="/chat/profile">Profile</a>
+                </li>
+                <li>
+                    <a href="/error_404">Error 404</a>
+                </li>
+                <li>
+                    <a href="/error_500">Error 500</a>
+                </li>
+            </ul>
+        </nav>
+        <div id="root">
+            Entry point
+        </div>
     </body>
 </html>
