Рефакторинг по замечаниям ревьюера

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                 </li>
             </ul>
         </nav>
-        <div id="root">
+        <main id="root">
             Entry point
-        </div>
+        </main>
     </body>
 </html>
