--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
             </ul>
         </nav>
         <main id="root">
-            Entry point
+            <div id="wrapper">
+                Entry point
+            </div>
         </main>
     </body>
 </html>
