--- a/index.html
+++ b/index.html
@@ -9,25 +9,25 @@
         <nav>
             <ul>
                 <li>
-                    <a href="/signin">Sign In</a>
+                    <a href="/" class="router-link">Sign In</a>
                 </li>
                 <li>
-                    <a href="/signup">Sign Up</a>
+                    <a href="/sign-up" class="router-link">Sign Up</a>
                 </li>
                 <li>
-                    <a href="/chat">Chat</a>
+                    <a href="/messenger" class="router-link">Chat</a>
                 </li>
                 <li>
-                    <a href="/chat/view">Active chat</a>
+                    <a href="/messenger/123" class="router-link">Active chat</a>
                 </li>
                 <li>
-                    <a href="/chat/profile">Profile</a>
+                    <a href="/settings" class="router-link">Profile</a>
                 </li>
                 <li>
-                    <a href="/error_404">Error 404</a>
+                    <a href="/error_404" class="router-link">Error 404</a>
                 </li>
                 <li>
-                    <a href="/error_500">Error 500</a>
+                    <a href="/error_500" class="router-link">Error 500</a>
                 </li>
             </ul>
         </nav>
