--- a/index.html
+++ b/index.html
@@ -5,33 +5,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     </head>
     <body>
-        <nav>
-            <ul>
-                <li>
-                    <a href="/" class="router-link">Sign In</a>
-                </li>
-                <li>
-                    <a href="/sign-up" class="router-link">Sign Up</a>
-                </li>
-                <li>
-                    <a href="/messenger" class="router-link">Chat</a>
-                </li>
-                <li>
-                    <a href="/messenger/123" class="router-link">Active chat</a>
-                </li>
-                <li>
-                    <a href="/settings" class="router-link">Profile</a>
-                </li>
-                <li>
-                    <a href="/error_404" class="router-link">Error 404</a>
-                </li>
-                <li>
-                    <a href="/error_500" class="router-link">Error 500</a>
-                </li>
-            </ul>
-        </nav>
-        <main id="root">
-
-        </main>
+        <main id="root"></main>
     </body>
 </html>
