--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <title><%= htmlWebpackPlugin.options.title %></title>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+        <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no,shrink-to-fit=no,viewport-fit=cover">
     </head>
     <body>
         <main id="root"></main>
